--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -324,7 +324,8 @@ a.text-gray:hover {
   margin: auto;
   padding: 0;
   border: 1px solid #888;
-  width: 80%;
+  width: 40%;
+  height: 60%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
@@ -360,7 +361,7 @@ a.text-gray:hover {
 
 .modal-header {
   padding: 2px 16px;
-  background-color: #5cb85c;
+  /* background-color: #5cb85c; */
   color: white;
 }
 
