--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -181,7 +181,14 @@ a.text-gray:hover {
   }
   
   label > span {
-    width: 140px;
+    /* width: 140px; */
+  }
+  .donet-mod .modal-header {
+    padding: 25px 0;
+}
+  .donet-mod label > span {
+    width: 80px;
+    line-height: 48px;
   }
   
   .field {
@@ -315,6 +322,7 @@ a.text-gray:hover {
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  z-index: 1111;
 }
 
 /* Modal Content */
@@ -325,12 +333,13 @@ a.text-gray:hover {
   padding: 0;
   border: 1px solid #888;
   width: 40%;
-  height: 60%;
+  /* height: 60%; */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
-  animation-duration: 0.4s
+  animation-duration: 0.4s;
+  
 }
 
 /* Add Animation */
