--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -17,7 +17,7 @@
 }
 .ppl-bar {
   text-align: center;
-  background-color: rgb(128, 0, 128);
+  /* background-color: rgb(128, 0, 128); */
   margin: auto;
   padding: 10px;
 }
@@ -52,7 +52,8 @@ a.text-gray:hover {
     color: rgb(0,0,0);
 }
 .footer-logo {
-    max-width: 50px;
+  width: auto;
+  height: 50px;
 }
 .trademark {
     font-size: 14px;
@@ -63,17 +64,26 @@ a.text-gray:hover {
 
 /* blocks */
 .logo-rounded {
-    height: 200px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #fff;
-    width: 200px;
-    margin: auto;
+  height: 125px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  width: 125px;
+  margin: auto;
 }
 .logo-rounded img {
-    width: 7rem;
+  width: auto;
+  height: 50px;
+}
+.hrader-logo-rounded {
+  width: 125px;
+  height: 125px;
+}
+.hrader-logo-rounded img {
+  width: auto;
+  height: 100px;
 }
 .down-arrow {
     color: rgb(71, 116, 182);
@@ -107,7 +117,7 @@ a.text-gray:hover {
     color: rgb(243, 236, 222);
 }
 .btn-black {
-    background-color: rgb(0,0,0);
+    background-color: #152a49;
     color: rgb(83, 86, 86);
 }
 .btn-black:hover {
