--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -162,7 +162,7 @@ a.text-gray:hover {
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    width: 60%;
   }
   
   /* The Close Button */
@@ -280,14 +280,18 @@ a.text-gray:hover {
       width: 100%;
       z-index: 9999999;
   }
-  .modal-header .close {
-      margin: 0;
-      background-color: #0070ba;
-      background-image: none;
-      opacity: 1;
-      text-shadow: none;
-      color: #fff;
-      padding: 10px;
+  .closing_button {
+    position: relative;
+    left: 93%;
+    margin: 0;
+    background-image: none;
+    opacity: 1;
+    text-shadow: none;
+    color: #0070ba;
+    padding: 10px;
+    border: none;
+    background-color: #fff;
+    font-size: 28px;
   }
   .swal-button{
       line-height: 30px;
@@ -319,6 +323,8 @@ a.text-gray:hover {
 }
 .modal-title {
   margin: auto;
+    margin-bottom: 60px;
+    margin-top: 60px;
 }
 .pay-btn {
   text-align: center;
@@ -352,7 +358,7 @@ a.text-gray:hover {
   margin: auto;
   padding: 0;
   border: 1px solid #888;
-  width: 40%;
+  /* width: 40%; */
   /* height: 60%; */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   -webkit-animation-name: animatetop;
@@ -394,7 +400,10 @@ a.text-gray:hover {
   color: white;
 }
 
-.modal-body {padding: 2px 16px;}
+.modal-body {
+  text-align: center;
+  min-height: 400px;
+}
 
 .modal-footer {
   padding: 2px 16px;
@@ -408,7 +417,9 @@ a.text-gray:hover {
 }
 .join-page-modal .modal-content {
   width: 60%;
+  min-height: 400px;
 }
+
 .join-page-modal .modal-body label > span {
   line-height: 42px;
   width: 50px;
@@ -440,4 +451,26 @@ a.text-gray:hover {
 }
 .privacy-pol{
   color: #6c757d;
+}
+
+/* ===============table data design ========= */
+table.backend-data {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.backend-data td, .backend-data th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+.backend-data tr:nth-child(even) {
+  background-color: #dddddd;
+}
+.donation-head {
+  text-align: center;
+  padding: 20px 0;
 }
